# terminus

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  NIGHT_HANDOFF_2026-02-13.md  PRODUCT_STRATEGY_v3.md  README.md  TASKLIST_v3.md  TESTING.md  eslint.config.js  handoff.md  index.html  mission_control.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml
docs/: AGENTIC_BEST_PRACTICES_PLAN_AND_STATUS_2026-02-24.md  DIFFERENTIATION.md  DOCS_INDEX.md  FUTURE_EXTENSION.md  LEARNING_LAYER.md  PLAN_SCHEMA.md  PRIMITIVES.md  PRINCIPLES_AND_CONSTRAINTS.md  PROVIDERS_AND_PACKAGING.md  RUNNER_STATE_MACHINE.md  SECURITY_AND_CONTROL.md  TERMINUS_AUDIT_AND_PLAN.md  TERMINUS_PRODUCT_STRATEGY_v3.md  Terminus_CONTEXT.md  USER_STORIES.md  UX_SYSTEM.md  VAULT_EXTRACTION_SPIKE.md  WORKFLOW_FOR_FRESH_SESSIONS.md  microcopy.md  plan.md  plan_schema_examples.json  progress.md  provider_registry.md  threat_model.md
src/: App.tsx  styles.css  types.ts  uiLogic.test.ts  uiLogic.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: main-window.json
src-tauri/src/: context_receipt.rs  db.rs  diagnostics.rs  email_connections.rs  gmail_pubsub.rs  guidance_utils.rs  inbox_watcher.rs  main.rs  missions.rs  primitives.rs  rules.rs  runner.rs  schema.rs  vault_spike.rs  web.rs  webhook_triggers.rs
src-tauri/src/learning/: mod.rs
src-tauri/src/providers/: keychain.rs  mod.rs  runtime.rs  types.rs
src-tauri/src/transport/: local_http.rs  mock.rs  mod.rs  relay.rs
src/components/: ConnectionHealthSummary.test.tsx  ConnectionHealthSummary.tsx  ConnectionPanel.tsx
tasks/: 0001-repo-skeleton.md  0002-ux-principles.md  0011-mission-control-ui.md  TERMINUS_TASKLIST_v3.md  task-list.txt
