[package]
name = "terminus"
version = "0.1.0"
description = "Terminus desktop app"
authors = ["Terminus"]
license = "UNLICENSED"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri = { version = "2", features = [] }
rusqlite = { version = "0.37", features = ["bundled"] }

[dev-dependencies]
pretty_assertions = "1"
