[package]
name = "terminus"
version = "0.1.0"
description = "Terminus desktop app"
authors = ["Terminus"]
license = "UNLICENSED"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tauri = { version = "2", features = ["tray-icon"] }
rusqlite = { version = "0.37", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
url = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pdf-extract = "0.7"
docx-rs = "0.4"
calamine = "0.31"
tauri-plugin-dialog = "2"

[dev-dependencies]
pretty_assertions = "1"
